--- a/main.css
+++ b/main.css
@@ -19,7 +19,7 @@ body {
     background-color: hsl(225, 100%, 98%);
     width: 400px; /*width is too big for mobile screen size */
     /* margin: 0 15px; */
-    /* padding: 30px; */
+    /* padding: 0 30px; */
 }
 
 h1 {
@@ -58,30 +58,34 @@ h1 {
     width: 50px;
     height: 50px;
     background-repeat: no-repeat;   
-    position: absolute;
-    left: 50px;
+    /* position: absolute;
+    left: -50px;
+    bottom: -50px; */
 }
 
 .plan-choice {
     /* background-color: hsl(225, 100%, 94%);  */
     position: relative;   
+    /* display: flex; */
 }
 
 .plan-type {
     color: hsl(223, 47%, 23%);
     font-weight: 700;
+    margin: 0;
 }
 
 .plan-price {
-    display: block;
     color: hsl(224, 23%, 55%); 
+    margin: 0;
+    /* text-align: left; */
 }
 
-.change-plan {
+/* .change-plan {
     position: absolute;
     right: 70px;
     bottom: 15px;
-}
+} */
 
 .proceed-payment-button { 
     display: inline-block;
